# internal/adapters/http/docs/swagger.yaml
@@ -750,6 +750,56 @@ paths:
       summary: Updates an API key
       tags:
       - API Keys
+  /api/v1/api-keys/{id}/disable:
+    post:
+      consumes:
+      - application/json
+      description: Disables a specific API key by ID
+      parameters:
+      - description: API Key ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+        default:
+          description: Default error response for all failures
+          schema:
+            $ref: '#/definitions/errors.HTTPError'
+      security:
+      - OAuth2Password: []
+      summary: Disables an API key
+      tags:
+      - API Keys
+  /api/v1/api-keys/{id}/enable:
+    post:
+      consumes:
+      - application/json
+      description: Enables a specific API key by ID
+      parameters:
+      - description: API Key ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+        default:
+          description: Default error response for all failures
+          schema:
+            $ref: '#/definitions/errors.HTTPError'
+      security:
+      - OAuth2Password: []
+      summary: Enables an API key
+      tags:
+      - API Keys
   /api/v1/api-keys/{id}/reveal/key:
     get:
       consumes:
